@@ -35,6 +35,7 @@ typedef struct ___d_drt_h
   uint16_t r_rep_l;
   uint64_t *p_accu;
   uint8_t uc_1;
+  void *st_ptr0;
 } _d_drt_h, *__d_drt_h;
 
 #endif /* M_COMP_H_ */
